--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ fastapi==0.115.12
 filelock==3.18.0
 fonttools==4.56.0
 fsspec==2025.3.0
+gunicorn==23.0.0
 idna==3.10
 importlib_resources==6.5.2
 Jinja2==3.1.6
@@ -33,6 +34,7 @@ pydantic==2.11.1
 pydantic_core==2.33.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.3
@@ -52,4 +54,5 @@ tzdata==2025.2
 # ultralytics==8.3.96
 # ultralytics-thop==2.0.14
 urllib3==2.3.0
+whitenoise==6.9.0
 zipp==3.21.0
